--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   uuid: ^4.4.0
   fl_chart: ^0.68.0
   intl: ^0.19.0
+  firebase_core: ^4.2.0
+  firebase_auth: ^6.1.1
+  flutterfire_cli: ^0.1.1+2
 
 
   # The following adds the Cupertino Icons font to your application.
