--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,14 @@ dependencies:
   provider: ^6.1.2
   uuid: ^4.4.0
   fl_chart: ^0.68.0
-  intl: ^0.19.0
+  intl: 0.18.1
   firebase_core: ^4.2.0
   firebase_auth: ^6.1.1
-  flutterfire_cli: ^0.1.1+2
+  flutterfire_cli: ^1.3.1
+  tflite_flutter: ^0.11.0
+  camera: ^0.11.2
+  image: ^4.5.4
+  path_provider: ^2.1.5
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -64,6 +68,9 @@ flutter:
   assets:
     - assets/splash_image.jpg
     - assets/logo.png
+    - assets/model/modelo_gastos.tflite
+    - assets/model/tokenizer.json
+    - assets/model/label_encoder.json
 
   # To add assets to your application, add an assets section, like this:
   # assets:
