--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,14 +35,17 @@ dependencies:
   provider: ^6.1.2
   uuid: ^4.4.0
   fl_chart: ^0.68.0
-  intl: 0.18.1
+  intl: ^0.20.2
   firebase_core: ^4.2.0
   firebase_auth: ^6.1.1
-  flutterfire_cli: ^1.3.1
+  shared_preferences: ^2.3.1
+  easy_localization: ^3.0.7
   tflite_flutter: ^0.11.0
   camera: ^0.11.2
   image: ^4.5.4
   path_provider: ^2.1.5
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -68,6 +71,7 @@ flutter:
   assets:
     - assets/splash_image.jpg
     - assets/logo.png
+    - assets/lang/
     - assets/model/modelo_gastos.tflite
     - assets/model/tokenizer.json
     - assets/model/label_encoder.json
