--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   path_provider: ^2.1.5
   flutter_localizations:
     sdk: flutter
+  cloud_firestore: ^6.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
